2005-08-04  Adele Peterson  <adele@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/4204496> REGRESSION(denver): repro crash in KHTMLParser::finished() downloading attachment at webmail.mac.com
        This regression was introduced by the fix for <rdar://problem/4084029>.  It was just missing a nil check.

        * khtml/html/htmlparser.cpp: (KHTMLParser::finished): added nil check for current.

2005-08-04  Geoffrey Garen  <ggaren@apple.com>

        - fixed <rdar://problem/4199495> REGRESSION: Safari Crashes on Window Closing Event

        Reviewed by darin.

        * khtml/ecma/kjs_binding.cpp:
        (KJS::ScriptInterpreter::updateDOMNodeDocument): inserting a node wrapper into a new
        document set now removes the node wrapper from its old document set.

2005-08-03  Vicki Murley  <vicki@apple.com>

        Reviewed by Beth and Hyatt.
 
	<rdar://problem/4196646> target returns text node when it should return the parent node

        Test cases added: manual-tests/mouseevents-on-textnodes.html

        * khtml/khtmlview.cpp:
        (KHTMLView::dispatchMouseEvent): if the targetNode is a text node, set the 
	targetNode to the parent node

2005-08-02  Bruce DiBello  <bdibello@apple.com>

        Reviewed by Geoffrey Garen.

        Test cases added: getting and setting button.value

        * layout-tests/fast/dom/HTMLButtonElement/value/getset-expected.txt: Added.
        * layout-tests/fast/dom/HTMLButtonElement/value/getset.html: Added.

2005-08-01  Geoffrey Garen  <ggaren@apple.com>

        - landed layout tests for fix to <rdar://problem/3572585> 
        window.open fails if name param = the name of a window just 
        closed in same function

        Fix reviewed by darin.

        Test cases added:

        * manual-tests/open-after-close.html: Added.
        * manual-tests/resources/open-after-close-popup.html: Added.

2005-08-01  David Hyatt  <hyatt@apple.com>

	Reviewed by cblu, kocienda, darin
